--- a/src/index.css
+++ b/src/index.css
@@ -114,9 +114,21 @@ a {
   text-align: center;
   text-transform: capitalize;
 }
+
 .project {
   position: relative;
+  width: 90vw;
+  max-width: var(--fixed-width);
+  background: rgba(0, 99, 53, 0.274);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  padding: 1.5rem 2rem;
+  box-shadow: var(--shadow-1);
+  text-align: center;
+  margin: 30px 0;
+  border-radius: var(--borderRadius);
 }
+
 .project__name {
   position: absolute;
   top: 0;
@@ -126,6 +138,7 @@ a {
   border-radius: var(--borderRadius);
   box-shadow: var(--shadow-4);
 }
+
 .logo {
   height: 4em;
   transition: filter 300ms;
@@ -172,8 +185,6 @@ a {
   transition: var(--transition);
 }
 
-.nav__links {}
-
 .nav__links li {
   list-style-type: none;
 }
@@ -194,26 +205,12 @@ a {
   transform: translateX(10px);
 }
 
-
 /* REVIEWS PROJECT */
 .main {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.review {
-  width: 90vw;
-  max-width: var(--fixed-width);
-  background: rgba(0, 99, 53, 0.274);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  padding: 1.5rem 2rem;
-  box-shadow: var(--shadow-1);
-  text-align: center;
-  margin: 50px 0;
-  border-radius: var(--borderRadius);
 }
 
 .review:hover {
@@ -280,6 +277,30 @@ a {
   cursor: pointer;
 }
 
+/* ACCORDION PROJECT */
+.accordion {
+  padding-top: 70px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.question {
+  background-color: var(--white);
+  border-radius: var(--borderRadius);
+}
+
+.question p {
+  background-color: var(--primary-500);
+  text-align: start;
+  padding: 5px 10px 5px 0;
+}
+
+.question__header {
+  color: #000;
+  display: flex;
+  justify-content: space-between;
+}
 
 @keyframes logo-spin {
   from {
@@ -318,8 +339,6 @@ a {
     transform: translateX(0px);
   }
 }
-
-
 
 @media (prefers-reduced-motion: no-preference) {
   .logo {
