--- a/src/index.css
+++ b/src/index.css
@@ -290,10 +290,14 @@ a {
   border-radius: var(--borderRadius);
 }
 
+.question h5 {
+  padding: 5px 10px 5px 5px;
+}
+
 .question p {
   background-color: var(--primary-500);
   text-align: start;
-  padding: 5px 10px 5px 0;
+  padding: 5px 10px 5px 5px;
 }
 
 .question__header {
