--- a/src/components/Tabs/Tabs.css
+++ b/src/components/Tabs/Tabs.css
@@ -1,8 +1,13 @@
+.tabs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 500px;
+}
+
 .tabs__container {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: start;
 }
-
-
