--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -7,16 +7,24 @@
   background: rgba(0, 0, 0, 0.7);
   display: grid;
   place-items: center;
-  opacity: 0;
   z-index: -1;
   visibility: hidden;
 }
 
 .show-modal {
-  opacity: 1;
   z-index: 1;
   visibility: visible;
-  transition: var(--transition);
+  animation: fade 0.5s ease-in-out;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 .modal {
